--- a/modules/gateway/console/src/main/java/com/l7tech/console/panels/resources/HttpRoutingWindowsIntegratedAuthPanel.form
+++ b/modules/gateway/console/src/main/java/com/l7tech/console/panels/resources/HttpRoutingWindowsIntegratedAuthPanel.form
@@ -3,7 +3,7 @@
   <grid id="6b154" binding="mainPanel" layout-manager="GridLayoutManager" row-count="5" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="120" y="129" width="251" height="179"/>
+      <xy x="120" y="129" width="357" height="162"/>
     </constraints>
     <properties/>
     <border type="none"/>
@@ -13,7 +13,7 @@
           <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
         </constraints>
       </vspacer>
-      <grid id="3512e" layout-manager="GridLayoutManager" row-count="3" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="3512e" layout-manager="GridLayoutManager" row-count="2" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
           <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="8" fill="0" indent="2" use-parent-layout="false"/>
@@ -29,14 +29,6 @@
               <text resource-bundle="com/l7tech/console/resources/HttpRoutingAssertionDialog" key="authWinConfiguredNameLabel.text"/>
             </properties>
           </component>
-          <component id="cd3e5" class="javax.swing.JLabel" binding="passwordLabel">
-            <constraints>
-              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-            </constraints>
-            <properties>
-              <text resource-bundle="com/l7tech/console/resources/HttpRoutingAssertionDialog" key="authWinConfiguredPasswordLabel.text"/>
-            </properties>
-          </component>
           <component id="aac96" class="javax.swing.JTextField" binding="krbAccountNameField">
             <constraints>
               <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
@@ -46,20 +38,41 @@
             </constraints>
             <properties/>
           </component>
-          <component id="a0e09" class="javax.swing.JPasswordField" binding="krbPasswordField">
+          <grid id="81271" layout-manager="GridLayoutManager" row-count="1" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+            <margin top="0" left="0" bottom="0" right="0"/>
             <constraints>
-              <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-                <minimum-size width="100" height="-1"/>
-                <preferred-size width="150" height="-1"/>
-              </grid>
+              <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties/>
-          </component>
-          <vspacer id="dd497">
+            <border type="none"/>
+            <children>
+              <component id="a0e09" class="javax.swing.JPasswordField" binding="krbPasswordField">
+                <constraints>
+                  <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+                    <minimum-size width="100" height="-1"/>
+                    <preferred-size width="150" height="-1"/>
+                  </grid>
+                </constraints>
+                <properties/>
+              </component>
+              <component id="daa41" class="javax.swing.JCheckBox" binding="showPasswordCheckBox" default-binding="true">
+                <constraints>
+                  <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="1" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <text resource-bundle="com/l7tech/console/resources/HttpRoutingAssertionDialog" key="showKrbPasswordCheckBox.label"/>
+                </properties>
+              </component>
+            </children>
+          </grid>
+          <component id="cd3e5" class="javax.swing.JLabel" binding="passwordLabel">
             <constraints>
-              <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
+              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
-          </vspacer>
+            <properties>
+              <text resource-bundle="com/l7tech/console/resources/HttpRoutingAssertionDialog" key="authWinConfiguredPasswordLabel.text"/>
+            </properties>
+          </component>
         </children>
       </grid>
       <component id="509e5" class="javax.swing.JRadioButton" binding="useConfiguredCredentialsRadioButton" default-binding="true">
