--- a/modules/gateway/console/src/main/java/com/l7tech/console/panels/resources/PrivateKeyPropertiesDialog.form
+++ b/modules/gateway/console/src/main/java/com/l7tech/console/panels/resources/PrivateKeyPropertiesDialog.form
@@ -3,12 +3,12 @@
   <grid id="27dc6" binding="mainPanel" layout-manager="GridLayoutManager" row-count="4" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="10" left="10" bottom="10" right="10"/>
     <constraints>
-      <xy x="20" y="20" width="647" height="457"/>
+      <xy x="20" y="20" width="611" height="526"/>
     </constraints>
     <properties/>
     <border type="none"/>
     <children>
-      <grid id="69b51" layout-manager="GridLayoutManager" row-count="6" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="69b51" layout-manager="GridLayoutManager" row-count="7" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="10" left="10" bottom="10" right="10"/>
         <constraints>
           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -89,6 +89,15 @@
             <properties>
               <icon value="com/l7tech/console/resources/cert_flag_ca_16.png"/>
               <text value="This is the default CA key."/>
+            </properties>
+          </component>
+          <component id="9474f" class="javax.swing.JLabel" binding="auditDecryptionLabel">
+            <constraints>
+              <grid row="6" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <icon value="com/l7tech/console/resources/cert_flag_auditviewer_16.png"/>
+              <text value="This is the audit viewer decryption key."/>
             </properties>
           </component>
         </children>
@@ -175,20 +184,12 @@
               <text value="Generate CS&amp;R"/>
             </properties>
           </component>
-          <component id="9d49" class="javax.swing.JButton" binding="makeDefaultCAButton" default-binding="true">
-            <constraints>
-              <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-            </constraints>
-            <properties>
-              <text value="Make Default C&amp;A"/>
-            </properties>
-          </component>
-          <component id="cf181" class="javax.swing.JButton" binding="makeDefaultSSLButton" default-binding="true">
+          <component id="cf181" class="javax.swing.JButton" binding="markAsSpecialPurposeButton" default-binding="true">
             <constraints>
               <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="Make Default &amp;SSL"/>
+              <text value="Mark as &amp;Special Purpose"/>
             </properties>
           </component>
           <component id="55b5b" class="javax.swing.JButton" binding="destroyPrivateKeyButton" default-binding="true">
